tests/compile_fail/effectful_manifest_unused_effect.stderr
error[E0277]: not every member of this fact set is declared by the enclosing set
  --> tests/compile_fail/effectful_manifest_unused_effect.rs:6:13
   |
 6 |       let _ = obzenflow_dsl::effectful_transform!(
   |  _____________^
 7 | |         Input -> { First } => AllowsFirstEffect,
 8 | |         effects: [],
 9 | |         middleware: []
10 | |     );
   | |_____^ the trait `SubsetOf<EmptySet, SubsetProofStep<_, SubsetProofEnd>>` is not implemented for `WithMember<FirstEffect, EmptySet>`
   |
   = note: every fact an allowed effect may author must be a member of the handler's `Output` set, and a stage arrow must equal the handler's declared set in both directions (FLOWIP-120z)
note: required by a bound in `__obzenflow_assert_manifest_declares_every_handler_allowed_effect`
  --> tests/compile_fail/effectful_manifest_unused_effect.rs:6:13
   |
 6 |       let _ = obzenflow_dsl::effectful_transform!(
   |  _____________^
 7 | |         Input -> { First } => AllowsFirstEffect,
 8 | |         effects: [],
 9 | |         middleware: []
10 | |     );
   | |     ^
   | |     |
   | |_____required by a bound in this function
   |       required by this bound in `__obzenflow_assert_manifest_declares_every_handler_allowed_effect`
   = note: this error originates in the macro `$crate::__obzenflow_assert_effectful_transform_contract` which comes from the expansion of the macro `obzenflow_dsl::effectful_transform` (in Nightly builds, run with -Z macro-backtrace for more info)
